[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/interactive/interactive/openDrawer.png" type="Texture" id=1]
[ext_resource path="res://scenes/interact/FSOpenCabinet.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/interact/OpenCabinet.gd" type="Script" id=4]
[ext_resource path="res://scenes/pickup/PadlockKeys.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 97.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 72.5 )

[node name="OpenCabinet" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OpenCabinet" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = -100.0
margin_top = -445.0
margin_right = -100.0
margin_bottom = -445.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 128, 98 )
shape = SubResource( 2 )

[node name="OpenDrawer" type="Sprite" parent="Area2D"]
position = Vector2( 125, 95 )
texture = ExtResource( 1 )

[node name="PadlockKey" parent="Area2D" instance=ExtResource( 5 )]
position = Vector2( -185, -25 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 127.5, 97.5 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
